TO_DO_LIST_ASSIGNMENT

--- a/ToDoListModels/ToDoListModels.csproj
+++ b/ToDoListModels/ToDoListModels.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\ToDoListApi\ToDoListApi.csproj" />
+    <ProjectReference Include="..\ToDoListTest\ToDoListTest.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
